k8s/base/order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: order
          image: ghcr.io/prgrms-be-adv-devcourse/order:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 45
            periodSeconds: 10
