k8s/base/order/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: biddy
spec:
  selector:
    app: order
  ports:
    - name: http
      port: 8083
      targetPort: 8083
